syntax = "proto3";

package agi.middleware.subscription.quota.v1;

option go_package = "github.com/NpoolPlatform/message/agi/middleware/v1/subscription/quota";

import "basetypes/agi/v1/enums.proto";
import "basetypes/v1/conds.proto";

message QuotaReq {
    optional uint32 ID = 10;
    optional string EntID = 20;
    optional string AppID = 30;
    optional string UserID = 40;
    optional uint32 Quota = 60;
    optional uint32 ExpiredAt = 60;
}

message Quota {
    // @inject_tag: sql:"id"
    uint32 ID = 10;
    // @inject_tag: sql:"ent_id"
    string EntID = 20;
    // @inject_tag: sql:"app_id"
    string AppID = 30;
    // @inject_tag: sql:"user_id"
    string UserID = 40;
    // @inject_tag: sql:"quota"
    uint32 Quota = 50;
    // @inject_tag: sql:"expired_at"
    uint32 ExpiredAt = 60;
    // @inject_tag: sql:"created_at"
    uint32 CreatedAt = 1000;
    // @inject_tag: sql:"updated_at"
    uint32 UpdatedAt = 2000;
}

message Conds {
    optional basetypes.v1.Uint32Val ID = 10;
    optional basetypes.v1.Uint32SliceVal IDs = 20;
    optional basetypes.v1.StringVal EntID = 30;
    optional basetypes.v1.StringSliceVal EntIDs = 40;
    optional basetypes.v1.StringVal AppID = 40;
    optional basetypes.v1.StringSliceVal AppIDs = 50;
    optional basetypes.v1.StringVal UserID = 60;
    optional basetypes.v1.StringSliceVal UserIDs = 70;
}

